# habit_tracker

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
telegram/: admin.py  apps.py  bot.py  models.py  serializers.py  services.py  urls.py  views.py
telegram/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
